Added more brute force

--- a/templates/rot11.html
+++ b/templates/rot11.html
@@ -19,6 +19,8 @@
     </style>
 </head>
 <body>
-    <div class="message">ROT11 - Tzzzdryeunlg! (DING DING! We have a winner!)</div>
+    <p class="warning">Haha, you used ROT11? Really?</p>
+   <p class="message"> That's not going to work</p>
+   <p> Better Luck Next Time</p>
 </body>
 </html>
